[package]
name = "alt-mpsc"
version = "0.1.0"
authors = ["Mark Rousskov <mark.simulacrum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "std"
harness = false

[[bench]]
name = "local"
harness = false

[profile.release]
debug = 2

[profile.bench]
debug = 2
lto = 'fat'
